--- a/SonicStore.Repository/appsettings.json
+++ b/SonicStore.Repository/appsettings.json
@@ -14,6 +14,10 @@
   "Session": {
     "Timeout": 20
   },
+  "GoogleKeys": {
+    "ClientId": "507507007160-pdmq57eemtf62ksl1el0b3fviksejjeh.apps.googleusercontent.com",
+    "ClientSecret": "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"
+  },
 
   "VnPay": {
     "TmnCode": "EPM78KL3",
